--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,7 @@ body {
   font-size: 1.625rem;
 }
 
-.sidebar-projects-container {
+.sidebar-lists-container {
   width: 100%;
   border-top: 1px solid var(--Black-25);
   padding-top: 32px;
