--- a/src/style.css
+++ b/src/style.css
@@ -102,18 +102,18 @@ body {
   width: 100%;
 }
 
-.credits {
+#credits {
   color: var(--Black-50);
   font-size: 0.875rem;
 }
 
-.credits a {
+#credits a {
   text-decoration: none;
   font-weight: 500;
 }
 
-.credits a,
-.credits a:visited {
+#credits a,
+#credits a:visited {
   color: var(--Primary);
 }
 
