--- a/src/style.css
+++ b/src/style.css
@@ -119,5 +119,11 @@ body {
 
 /* List content */
 
+#list-content {
+  flex: 1;
+}
+
 #list-background {
+  height: 152px;
+  background: var(--List-Background-Gradient);
 }
