--- a/src/style.css
+++ b/src/style.css
@@ -158,3 +158,33 @@ button {
   border: 1px solid var(--Black-25);
   border-radius: 8px;
 }
+
+/* Tasks */
+
+#tasksContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 8px;
+}
+
+.task {
+  background-color: var(--Black-05);
+  padding: 24px 32px;
+  border: 1px solid var(--Black-25);
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.task .title {
+  color: var(--Black);
+  font-weight: 500;
+  font-size: 1.375rem;
+}
+
+.task .description,
+.task .date {
+  color: var(--Black-50);
+}
