--- a/src/style.css
+++ b/src/style.css
@@ -53,6 +53,10 @@ button {
   cursor: pointer;
 }
 
+p {
+  margin: 0;
+}
+
 /* Sidebar */
 
 #sidebar {
@@ -151,6 +155,8 @@ button {
 /* List content */
 
 #list-page {
+  display: flex;
+  flex-direction: column;
   width: calc(100% - 256px);
   margin-left: auto;
 }
@@ -176,6 +182,28 @@ button {
   color: var(--Black-50);
   border: 1px solid var(--Black-25);
   border-radius: 8px;
+}
+
+.empty-page {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 48px auto;
+  width: clamp(400px, 50vw, 800px);
+  text-align: center;
+  gap: 24px;
+}
+
+.empty-page .empty-title {
+  color: var(--Primary);
+  font-weight: 700;
+  font-size: 2.5rem;
+}
+
+.empty-page .empty-subtitle {
+  font-size: 1.2rem;
+  color: var(--Black-50);
 }
 
 /* Tasks */
