--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 *,
 *::after,
@@ -40,10 +40,19 @@ body {
   margin: 0;
 }
 
-h1 {
-  font-size: 2.534rem;
+h1,
+h2 {
   margin: 0;
   font-weight: 700;
+}
+
+h1 {
+  font-size: 2.534rem;
+}
+
+h2 {
+  font-size: 1.6rem;
+  font-weight: 600;
 }
 
 button {
@@ -212,7 +221,8 @@ p {
 
 /* Tasks */
 
-#task-container {
+#task-container,
+#completed-tasks-container {
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -290,4 +300,15 @@ p {
 
 .task .date {
   color: var(--Black-75);
+}
+
+/* Completed tasks */
+.completed-tasks-section {
+  border-top: 1px solid var(--Black-25);
+  margin-top: 32px;
+  padding-top: 32px;
+}
+
+.completed-tasks-section .completed-tasks-title {
+  margin-bottom: 24px;
 }
