--- a/src/style.css
+++ b/src/style.css
@@ -55,40 +55,8 @@ h2 {
   font-weight: 600;
 }
 
-button {
-  font-family: inherit;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  padding: 10px 16px;
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-button.primary {
-  background-color: var(--Primary);
-  color: var(--White);
-}
-
-button.secondary {
-  background-color: var(--Black-10);
-  color: var(--Black-75);
-}
-
 p {
   margin: 0;
-}
-
-dialog {
-  display: flex;
-  padding: 16px;
-  background-color: var(--White);
-  border: none;
-  border-radius: 16px;
-}
-
-dialog::backdrop {
-  background-color: #00000099;
 }
 
 /* Sidebar */
@@ -368,9 +336,41 @@ dialog::backdrop {
 
 /* Dialogs */
 
-.buttons {
+dialog {
+  display: flex;
+  padding: 16px;
+  background-color: var(--White);
+  border: none;
+  border-radius: 16px;
+}
+
+dialog::backdrop {
+  background-color: #00000099;
+}
+
+dialog .buttons {
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
   gap: 8px;
+}
+
+button {
+  font-family: inherit;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  padding: 10px 16px;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+button.primary {
+  background-color: var(--Primary);
+  color: var(--White);
+}
+
+button.secondary {
+  background-color: var(--Black-10);
+  color: var(--Black-75);
 }
