--- a/src/style.css
+++ b/src/style.css
@@ -338,6 +338,8 @@ p {
 
 dialog {
   display: flex;
+  flex-direction: column;
+  gap: 16px;
   padding: 16px;
   background-color: var(--White);
   border: none;
@@ -351,8 +353,18 @@ dialog::backdrop {
 dialog .buttons {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-end;
+  justify-content: end;
   gap: 8px;
+}
+
+input[type="text"] {
+  font-family: inherit;
+  font-size: 1.375rem;
+  font-weight: 600;
+  padding: 2px 4px 0 4px;
+  color: var(--Black);
+  border: none;
+  border-bottom: 3px solid var(--Primary);
 }
 
 button {
@@ -373,4 +385,21 @@ button.primary {
 button.secondary {
   background-color: var(--Black-10);
   color: var(--Black-75);
+}
+
+/* New list dialog */
+
+dialog#new-list .title-container {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+dialog#new-list .title-icon-input {
+  width: 32px;
+  height: 32px;
+  padding: 4px;
+  border: 1px solid var(--Black-25);
+  border-radius: 8px;
+  cursor: pointer;
 }
