--- a/src/style.css
+++ b/src/style.css
@@ -503,6 +503,7 @@ dialog#new-task .task-select-inputs {
   display: none;
   flex-direction: column;
   background-color: var(--White);
+  color: var(--Black);
   border: 1px solid #a3a3a3;
   border-radius: 8px;
   cursor: pointer;
