Hide input element to avoid interaction from user

--- a/src/style.css
+++ b/src/style.css
@@ -479,6 +479,9 @@ textarea::placeholder {
 /* Task options */
 
 /* Date input */
+#date-input input[type="date"] {
+  display: none;
+}
 
 /* Select inputs */
 
