--- a/src/style.css
+++ b/src/style.css
@@ -480,7 +480,10 @@ textarea::placeholder {
 
 /* Date input */
 #date-input input[type="date"] {
-  display: none;
+  visibility: hidden;
+  width: 0;
+  height: 0;
+  position: absolute;
 }
 
 /* Select inputs */
