Fix color to task title in details dialog

--- a/src/style.css
+++ b/src/style.css
@@ -740,6 +740,7 @@ dialog#task-details .main-information {
 }
 
 .main-information .task-title {
+  color: var(--Black);
   font-weight: 600;
   font-size: 1.6rem;
 }
